test/ui/tests/fail/class-constructor-with-self.rs
struct Example;

#[neon::class]
impl Example {
    fn new(self) -> Self {
        self
    }
}

fn main() {}
