test/ui/tests/fail/class-constructor-with-self.stderr
error: constructor cannot have a self receiver
 --> tests/fail/class-constructor-with-self.rs:5:12
  |
5 |     fn new(self) -> Self {
  |            ^^^^
